--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -6,9 +6,9 @@ on:
 jobs:
   gradle-publish:
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-      contents: read
+#    permissions:
+#      id-token: write
+#      contents: read
     steps:
       - name: Check the calling organization
         if: ${{ github.repository_owner != 'cloudshiftinc' }}
