--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -30,14 +30,11 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          # Install Java 11 to support Kotlin 1.5 / Gradle 7.4.x; remove once on Gradle 7.5
-          java-version: |
-            11
-            17
+          java-version: 17
           distribution: corretto
 
       - name: Setup and execute Gradle
         uses: gradle/gradle-build-action@v2
         with:
           gradle-version: wrapper
-          arguments: build check publish --info --stacktrace --no-configuration-cache -Porg.gradle.java.installations.auto-detect=false -Porg.gradle.java.installations.fromEnv=JAVA_HOME_11_X64,JAVA_HOME_17_X64
+          arguments: build check publish --info --stacktrace --no-configuration-cache -Porg.gradle.java.installations.auto-detect=false -Porg.gradle.java.installations.fromEnv=JAVA_HOME_17_X64
