--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -25,14 +25,19 @@ jobs:
         with:
           fetch-depth: 0
 
+      # TODO - remove this once Gradle can self-provision Corretto JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: 17
           distribution: corretto
 
+      # TODO - adjust java installations once we self-provision Corretto JDK 17
       - name: Setup and execute Gradle
         uses: gradle/gradle-build-action@v2
         with:
           gradle-version: wrapper
+          gradle-home-cache-includes: |
+            jdks
+            go
           arguments: build check publish --info --stacktrace --no-configuration-cache -Porg.gradle.java.installations.auto-detect=false -Porg.gradle.java.installations.fromEnv=JAVA_HOME_17_X64
