Update for caching go, JDKs

--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -40,4 +40,6 @@ jobs:
           gradle-home-cache-includes: |
             jdks
             go
+          gradle-home-cache-excludes: |
+            go/cache
           arguments: build check publish --info --stacktrace --no-configuration-cache -Porg.gradle.java.installations.auto-detect=false -Porg.gradle.java.installations.fromEnv=JAVA_HOME_17_X64
