Don't cache downloaded go pkgs

--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -42,4 +42,5 @@ jobs:
             go
           gradle-home-cache-excludes: |
             go/cache
+            go/pkg
           arguments: build check publish --info --stacktrace --no-configuration-cache -Porg.gradle.java.installations.auto-detect=false -Porg.gradle.java.installations.fromEnv=JAVA_HOME_17_X64
