--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -26,11 +26,18 @@ jobs:
           fetch-depth: 0
 
       # TODO - remove this once Gradle can self-provision Corretto JDK 17
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: 17
-          distribution: corretto
+#      - name: Set up JDK 17
+#        uses: actions/setup-java@v3
+#        with:
+#          java-version: 17
+#          distribution: corretto
+
+      - name: Set JAVA_HOME
+        id: JAVA_HOME
+        run: |
+          echo "JAVA_HOME={{ env.JAVA_HOME_17_X64 }}" >> $GITHUB_ENV
+
+# JAVA_HOME_17_X64
 
       # TODO - adjust java installations once we self-provision Corretto JDK 17
       - name: Setup and execute Gradle
@@ -44,4 +51,4 @@ jobs:
             go-pkg-cache
           gradle-home-cache-excludes: |
             go/cache
-          arguments: build check publish --info --stacktrace --no-configuration-cache -Porg.gradle.java.installations.auto-detect=false -Porg.gradle.java.installations.fromEnv=JAVA_HOME_17_X64
+          arguments: build check publish --info --stacktrace --no-configuration-cache
