Use Gradle provisioning of JDK

--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -25,14 +25,10 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set JAVA environemnt variables
+      - name: Set JAVA environment variables
         id: java-env-vars
         run: |
           echo "JAVA_HOME=$JAVA_HOME_17_X64" >> $GITHUB_ENV
-
-#echo "CUSTOM_JAVA_TOOLCHAINS=$(find ~/.gradle/jdks -type d -depth 1 | paste -s -d ',' -)" >> $GITHUB_ENV
-#-Porg.gradle.java.installations.paths=${{env.CUSTOM_JAVA_TOOLCHAINS}}
-#find ~/.gradle/jdks -type d -depth 1
 
       - name: Setup and execute Gradle
         uses: gradle/gradle-build-action@v2
